--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp">
+    >
 
     <ImageView
         android:layout_width="wrap_content"
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:src="@drawable/ic_subject_black_24dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="15dp"/>
+        android:layout_margin="8dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -19,5 +19,6 @@
         android:text="Large Text"
         android:id="@+id/textView"
         android:textColor="#FFFFFF"
+        android:layout_margin="8dp"
         android:layout_gravity="center_vertical"/>
 </LinearLayout>
