--- a/app/src/main/res/layout/f_product_issues.xml
+++ b/app/src/main/res/layout/f_product_issues.xml
@@ -28,20 +28,24 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="left">
+        android:gravity="left" >
         />
 
         <ListView
             android:id="@+id/productIssues_lv_jobNo"
             android:layout_width="125dp"
-            android:layout_height="wrap_content" />
+            android:footerDividersEnabled="true"
+            android:headerDividersEnabled="true"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="7"
             android:orientation="vertical"
-            android:stretchColumns="1">
+            android:stretchColumns="1"
+           >
 
             <TableRow>
 
