--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -123,7 +123,7 @@
             <Spinner
                 android:id="@+id/jobDetail_status"
                 android:layout_width="117dp"
-                android:layout_height="17dp"
+                android:layout_height="20dp"
                 android:gravity="left"
                 android:textSize="17dp" />
         </LinearLayout>
@@ -172,6 +172,14 @@
             android:textSize="16dp"
             android:layout_margin="5dp"
             android:minLines="5"
+            />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_viewPhoto"
+            android:src="@drawable/ic_camera_enhance_black_24dp"
+            android:layout_gravity="right"
+            android:background="@android:color/transparent"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -305,6 +313,14 @@
             android:minLines="5"
             android:text="Nothing"
             android:textSize="15dp" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_viewSign"
+            android:src="@drawable/ic_border_color_black_24dp"
+            android:layout_gravity="right"
+            android:background="@android:color/transparent"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -331,7 +347,7 @@
                 android:layout_weight="1"
                 android:layout_margin="5dp"
                 android:background="@drawable/styled_button"
-                android:text="Add Photo"
+                android:text="Photo"
                 android:textSize="12dp"
                 android:textColor="@drawable/styled_text"/>
 
@@ -345,7 +361,7 @@
                 android:textSize="12dp"
                 android:background="@drawable/styled_button"
                 android:textColor="@drawable/styled_text"
-                android:text="Cancel Job"/>
+                android:text="Cancel"/>
 
 
             <Button
@@ -361,7 +377,9 @@
 
 
 
+
         </LinearLayout>
+
 
         <Button
             android:layout_width="match_parent"
