--- a/app/src/main/res/layout/f_job_list_layout.xml
+++ b/app/src/main/res/layout/f_job_list_layout.xml
@@ -2,7 +2,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <com.tyict.ptms.RefreshableView
         android:id="@+id/refreshable_view"
         android:layout_width="fill_parent"
@@ -10,10 +9,15 @@
 
         <ListView
             android:id="@+id/lvJobList"
+            android:dividerHeight="2dp"
+            android:divider="#DDDDDD"
+            android:footerDividersEnabled="true"
+            android:headerDividersEnabled="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
     </com.tyict.ptms.RefreshableView>
+
 </LinearLayout>
