--- a/app/src/main/res/layout/f_job_list_layout.xml
+++ b/app/src/main/res/layout/f_job_list_layout.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <com.tyict.ptms.RefreshableView
+    <com.tyict.ptms.JobService.RefreshableView
         android:id="@+id/refreshable_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -18,6 +18,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-    </com.tyict.ptms.RefreshableView>
+    </com.tyict.ptms.JobService.RefreshableView>
 
 </LinearLayout>
