--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,9 +74,15 @@
                 android:maxLines="1"
                 android:password="true" />
         </TableRow>
+        <TableRow>
+            <CheckBox
+                android:id="@+id/cbSavePassword"
+                android:text="Save Password"
+                android:layout_column="0"
+                android:layout_span="2"/>
+        </TableRow>
 
         <TableRow>
-
             <TextView
                 android:id="@+id/message"
                 android:layout_margin="5dp"
